--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="word-guesser, word guesser, word guessing game, party game, wordle variant">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
